kubernetes/ledger-board-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ledger-board-frontend
  name: ledger-board-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ledger-board-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ledger-board-network: "true"
        io.kompose.service: ledger-board-frontend
    spec:
      containers:
        - env:
            - name: BACKEND_IP
          image: ledger-board-frontend
          name: ledger-board-frontend
          ports:
            - containerPort: 4200
          resources: {}
      restartPolicy: Always
status: {}
