kubernetes/ledger-board-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ledger-board-nginx
  name: ledger-board-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ledger-board-nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ledger-board-network: "true"
        io.kompose.service: ledger-board-nginx
    spec:
      containers:
        - image: ledger-board-nginx
          name: ledger-board-nginx
          ports:
            - containerPort: 80
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
