kubernetes/ledger-board-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ledger-board-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ledger-board-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ledger-board-network: "true"
